<resources>
    <string name="app_name">TCHALAM</string>
    <string name="tchalam">TCHALAM</string>
    <string name="Ex">Ex: example@gmail.com</string>
    <string name="password">Votre Mot de Passe</string>
    <string name="login">Connexion</string>
    <string name="sing_up">Creer</string>
    <string name="if_you_don_t_have_an_account">Si vous n\'avez pas de compte</string>
    <string name="name">Nom</string>
    <string name="lastname">Prenom</string>
    <string name="cr_er">Créer</string>
    <string name="user">User</string>
    <string name="deconnecter">Deconnecter</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject">Subject</string>
    <string name="choisir_un_sujet">Choisir un Sujet</string>
    <string name="choix_d_un_sujet">Choix d\'un Sujet</string>
    <string name="question">Question</string>
    <string name="option_a">option A</string>
    <string name="option_b">option B</string>
    <string name="option_c">option C</string>
    <string name="option_d">option D</string>
    <string name="TCHALAM">TCHALAM</string>
    <string name="email">Saisir votre email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="continuer">Continuer</string>
    <string name="score">Score</string>
    <string name="score_value">50</string>

    <string name="desctchalam">Tchalam est une application de préparation des étudiants finissant pour mieux aborder les concours d\'admission à l\'Université publique ou privée.
</string>
    <string name="creation_compte">Creation Compte</string>
    <string name="adresse_email">Adresse Email</string>
    <string name="connexion">Connexion</string>
    <string name="score_">Score</string>
    <string name="info_personnelles">Info Personnelles</string>
    <string name="modifier_mot_de_passe">Modifier Mot de Passe</string>
</resources>