<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:elevation="5dp"
        android:gravity="center"
        android:hint="@string/quiz"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationZ="3dp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/optionA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/unselected_btn"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/option_a"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:translationZ="3dp" />

    <Button
        android:id="@+id/optionB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/unselected_btn"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/option_b"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:translationZ="3dp" />

    <Button
        android:id="@+id/optionC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/unselected_btn"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/option_c"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:translationZ="3dp" />

    <Button
        android:id="@+id/optionD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/unselected_btn"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/option_d"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:translationZ="3dp" />
</LinearLayout>