<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/bgactivity"
    tools:context=".IntroActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tchalam"
        android:textColor="@color/blueMe"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        />
    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desctchalam"
        android:layout_below="@id/tvTitle"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        />
    <ImageView
        android:id="@+id/ivStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/student"
        android:layout_below="@id/tvDesc"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivStudent"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/bgbutton"
        android:text="@string/continuer"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>