<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgactivity"
    tools:context=".LoginActivity">


    <View
        android:id="@+id/vHead"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:background="@drawable/headwave" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/book" />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/imageView2"
        android:scrollbars="vertical">
    <LinearLayout
        android:id="@+id/ltext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vHead"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Connexion"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adresse Email"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ems="10"
            android:background="@drawable/formedittext"
            android:hint="@string/Ex"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mot de passe"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ems="10"
            android:background="@drawable/formedittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ltext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginStart="120dp"
            android:background="@drawable/bgbutton"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btLogin"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:text="@string/if_you_don_t_have_an_account"
                android:textSize="17sp" />
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btLogin"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/tvText"
            android:text="@string/sing_up"
            android:textStyle="bold"
            android:textColor="@color/blueLight"
            android:textSize="18sp" />
    </LinearLayout>

    </LinearLayout>

    </ScrollView>
</RelativeLayout>