<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:background="@drawable/rectangle24" />

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@id/view2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-38dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/user_img" />

    <ImageView
        android:id="@+id/img_user_info"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/view2"
        android:layout_marginStart="50dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_person_outline_24" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_marginStart="15dp"
        android:layout_marginTop="67dp"
        android:layout_toEndOf="@+id/img_user_info"
        android:text="@string/info_personnelles"
        android:textColor="#053797"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/img_score"
        android:text="@string/score"
        android:textColor="#053797"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_score"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/img_user_info"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_military_tech_24" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/img_user_info"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#1631C6" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/img_score"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/img_ch_pswd"
        android:text="@string/modifier_mot_de_passe"
        android:textColor="#053797"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/img_ch_pswd"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <ImageView
        android:id="@+id/img_logout_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/img_ch_pswd"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_logout_24" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_toEndOf="@+id/img_logout_user"
        android:text="@string/deconnecter"
        android:textColor="#053797"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_ch_pswd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/img_score"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_lock_person_24" />

</RelativeLayout>