<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tchalam"
    tools:context=".fragments.ScoreFragment">

    <TextView
        android:id="@+id/tv_barem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/tchalam"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_barem"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/rlv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_barem">

        <TextView
            android:id="@+id/tv_tot_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:text="Total Answer"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_Answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_tot_ans"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="5/10"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlv1"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/score"
        android:textSize="34sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rlScore"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/tv_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/circle">

        <TextView
            android:id="@+id/tv_scorevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/score_value"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

</RelativeLayout>